# neuron

./: .env.example  .gitignore  .gitmodules  .mcp.json  ARCHITECTURE.md  CLAUDE.md  CRON.md  DIAGRAM.md  README.md  RULES.md  diagram.md
.claude/: daily-report-2026-03-14.md  daily-report-2026-03-15.md  daily-report-2026-03-16.md  env-loader.sh  ralph-loop.local.md  settings.json
.claude/skills/flexible-report-generator/: MIGRATION.md  SKILL.md  mcp_interface.py  pyproject.toml  requirements.txt
.claude/skills/flexible-report-generator/data/: analyst-styles.csv  color-schemes.csv  components.csv  layouts.csv
.claude/skills/flexible-report-generator/scripts/: __init__.py  report_cli.py  report_generator.py  schema_adapter.py
.claude/skills/flexible-report-generator/templates/: base.html.j2
.claude/skills/flexible-report-generator/templates/components/: callout_box.html.j2  chart_section.html.j2  cover_page.html.j2  data_table.html.j2  heatmap.html.j2  hero_metric.html.j2  insight_card.html.j2  scatter_plot.html.j2  trend_indicator.html.j2  waterfall_chart.html.j2
.claude/skills/flexible-report-generator/templates/partials/: footer.html.j2  header.html.j2
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
docs/: arkraft-confluence-analysis.md  diagram.md  improvement-log.md
handoff/: README.md  _index.md  neuron-v2-redesign.md
knowledge/: _index.yaml  ai-axioms.md  api-tokens.md  data-pipeline.md  decision-guide.md  doc-policy.md  doc-routine.md  extension-mechanisms.md  git-advanced.md  git-workflow.md  github-api-patterns.md  github-settings.md  neuron-base.md  (+9 more)
modules/arkraft/arkraft-agent-portfolio/: CLAUDE.md  pyproject.toml
modules/arkraft/arkraft-agent-portfolio/src/: __init__.py  agent.py  handler.py  log.py  main.py  ping.py  web.py
modules/arkraft/arkraft-agent-portfolio/static/: index.html
modules/arkraft/arkraft-agent-portfolio/workspace/: CLAUDE.md
modules/arkraft/arkraft-agent-portfolio/workspace/.claude/agents/: portfolio-manager.md  quant-analyst.md
modules/arkraft/arkraft-agent-portfolio/workspace/.claude/skills/portfolio/: SKILL.md
modules/arkraft/arkraft-agent-portfolio/workspace/.claude/skills/portfolio/references/: output-schema.md  pm_evaluation_guide.md
modules/arkraft/arkraft-agent-portfolio/workspace/.claude/skills/portfolio/scripts/: analyze_alphas.py  finalize_portfolio.py
modules/arkraft/arkraft-agent-portfolio/workspace/phase1/: context.json
modules/arkraft/arkraft-agent-portfolio/workspace/phase2/: analysis.json  clusters.json  correlation.json  turnover_analysis.json
modules/arkraft/arkraft-agent-portfolio/workspace/phase3/: evaluations.json
modules/arkraft/arkraft-alpha-reviewer/: .env.example  .gitignore  CLAUDE.md  pyproject.toml
modules/arkraft/arkraft-alpha-reviewer/src/: __init__.py  agent.py  main.py
modules/arkraft/arkraft-alpha-reviewer/workspace/: CLAUDE.md
(+253 files in other folders)
